--- a/pokedex/public/style.css
+++ b/pokedex/public/style.css
@@ -41,11 +41,11 @@ h2 {
   display: flex;
   justify-content: center;
   font-family: "Rubik", sans-serif;
-  font-size: 50px;
+  font-size: 15%;
 }
 h3 {
   display: flex;
   justify-content: center;
   font-family: "Rubik", sans-serif;
-  font-size: 40px;
+  font-size: 12%;
 }
